# AJ-Lox

./: CMakeLists.txt
.cache/clangd/index/: aj_lox.cc.1476D89C4F2E2379.idx  aj_lox.h.9F2EE3E0E36101E2.idx  error_reporter.h.2398FED6609F5284.idx  main.cc.C3D79ADBDCAC3DF0.idx  scanner.cc.A3B477C81359E553.idx  scanner.h.678B66A56470EBB6.idx  token.h.353F39CD3CD88759.idx
.zed/: debug.json
include/: aj_lox.h  error_reporter.h  scanner.h  token.h
src/: aj_lox.cc  main.cc  scanner.cc
testing_files/: error_file.lex  program1.lex  small_program.lex
